Project

General

Profile

Actions

Bug #43909

closed

mds: SIGSEGV in Migrator::export_sessions_flushed

Added by Patrick Donnelly over 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2020-01-26T05:13:38.320+0000 7fa33a342700 10 MDSContext::complete: 25C_M_ExportSessionsFlushed
2020-01-26T05:13:38.320+0000 7fa33a342700  7 mds.1.migrator export_sessions_flushed [dir 0x20000000046.101010111* /client.1/tmp/testdir/dir1/dir2/ [2,head] auth{2=1} v=1066 cv=1055/1055 state=1610874881|complete f(v1 22=22+0) n(v9 rc2020-01-26T05:12:58.311122+0000 22=22+0) hs=22+0,ss=0+0 dirty=4 | child=1 frozen=0 subtree=0 replicated=1 dirty=1 waiter=0 authpin=0 0x5600d2988c00]
2020-01-26T05:13:38.320+0000 7fa33a342700  7 mds.1.migrator export must have aborted on 0x5600d2988c00
2020-01-26T05:13:38.320+0000 7fa33a342700 10 mds.1.8  finish 0x5600c907a920
2020-01-26T05:13:38.320+0000 7fa33a342700 10 MDSContext::complete: 25C_M_ExportSessionsFlushed
2020-01-26T05:13:38.320+0000 7fa33a342700 -1 *** Caught signal (Segmentation fault) **
 in thread 7fa33a342700 thread_name:ms_dispatch

 ceph version 15.0.0-9777-gd5c5d76 (d5c5d76bcc015abe4da79936cd40dc5d2b6c5710) octopus (dev)
 1: (()+0x12890) [0x7fa340d33890]
 2: (operator<<(std::ostream&, CDir const&)+0x56) [0x5600c685f9a6]
 3: (Migrator::export_sessions_flushed(CDir*, unsigned long)+0x305) [0x5600c681d565]
 4: (MDSContext::complete(int)+0x52) [0x5600c6912372]
 5: (C_GatherBase<MDSContext, C_MDSInternalNoop>::sub_finish(MDSContext*, int)+0x134) [0x5600c667a0c4]
 6: (C_GatherBase<MDSContext, C_MDSInternalNoop>::C_GatherSub::complete(int)+0x21) [0x5600c667a461]
 7: (MDSRank::_advance_queues()+0xa0) [0x5600c6653550]
 8: (MDSRank::_dispatch(boost::intrusive_ptr<Message const> const&, bool)+0x1e3) [0x5600c6654033]
 9: (MDSRankDispatcher::ms_dispatch(boost::intrusive_ptr<Message const> const&)+0xd2) [0x5600c6654c32]
 10: (MDSDaemon::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0xfe) [0x5600c6641cfe]
 11: (DispatchQueue::entry()+0x11ea) [0x7fa34160d65a]
 12: (DispatchQueue::DispatchThread::entry()+0xd) [0x7fa3416aeadd]
 13: (()+0x76db) [0x7fa340d286db]
 14: (clone()+0x3f) [0x7fa33ff0e88f]
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

From: /ceph/teuthology-archive/pdonnell-2020-01-25_00:13:49-multimds-wip-pdonnell-testing-20200124.211519-distro-basic-smithi/4704002/remote/smithi191/log/ceph-mds.b.log.gz


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #44290: mimic: mds: SIGSEGV in Migrator::export_sessions_flushedRejectedNathan CutlerActions
Copied to CephFS - Backport #44291: nautilus: mds: SIGSEGV in Migrator::export_sessions_flushedResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly over 4 years ago

  • Assignee set to Zheng Yan
Actions #2

Updated by Zheng Yan over 4 years ago

void Migrator::export_sessions_flushed(CDir *dir, uint64_t tid)
{
  dout(7) << "export_sessions_flushed " << *dir << dendl;

looks like it's caused by the dout. export was canceled and dir was trimmed

Actions #3

Updated by Zheng Yan about 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 33291
Actions #4

Updated by Patrick Donnelly about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to nautilus,mimic
Actions #5

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #44290: mimic: mds: SIGSEGV in Migrator::export_sessions_flushed added
Actions #6

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #44291: nautilus: mds: SIGSEGV in Migrator::export_sessions_flushed added
Actions #7

Updated by Greg Farnum about 4 years ago

  • Status changed from Pending Backport to Resolved
Actions #8

Updated by Greg Farnum about 4 years ago

  • Status changed from Resolved to Pending Backport

Whoops wrong ticket.

Actions #9

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF